cmake_minimum_required(VERSION 3.10)

project(ModSynth)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set(CMAKE_PDB_OUTPUT_DIRECTORY     "${CMAKE_CURRENT_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")

set(CMAKE_CXX_STANDARD 14) #c++14, otherwise instant meshes doesn't compile
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(modsynth)
add_subdirectory(SDL2)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
